HTML CSS mini project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rhutwik's -Resume</title>
+    <link rel="Stylesheet" href="./styles.css">
+    <script src="https://kit.fontawesome.com/9035079bef.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+    <h1 class="Name1">Rhutwik Jaiswal</h1>
+    <nav class="nav">
+        <ul>
+            <li><a href="#AboutMe">About</a></li>
+            <li><a href="#Education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#bio">Bio </a></li>
+            <li><a href="#projects">Projects</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <img id="backgroundImage" src="https://static-cse.canva.com/blob/572026/removingbackgroundimages_Unsplash.jpeg"
+            alt="backgroundImage">
+        <img id="myImage"
+            src="https://lh3.googleusercontent.com/a-/AFdZucqUjMyPhZB5fT0cpt5XV5Rj_ZUYoBb_I-_QbreRrg=s288-p-rw-no"
+            alt="myImage">
+        <div class="nameProfile">
+            <h2>Rhutwik Jaiswal</h2>
+            <h4>Full-Stack Web Developer</h4>
+        </div>
+        <div class="icons">
+            <ul>
+                <li> <a href="https://www.linkedin.com/feed/"> <i class="fa-brands fa-linkedin"> </i></a> </li>
+                <li><a href="https://www.facebook.com/home.php"> <i class="fa-brands fa-facebook"></i></a> </li>
+                <li><a href="https://www.instagram.com/rhutwik24/"> <i class="fa-brands fa-instagram"> </i></a></li>
+                <li> <a href="https://github.com/rhutwikjaiswal?tab=repositories"> <i class="fa-brands fa-github">
+                        </i></a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="container2">
+        <div class="aboutMe">
+            <h2 id="AboutMe">About Me</h2>
+            <p id="disp"> I am a hard-working and driven individual who isn’t afraid to face a challenge.
+                I’m passionate about my work and I know how to get the job done.
+                <br> <br> I would describe myself as an open and honest person who doesn’t believe in misleading other
+                people
+                and tries to be fair in everything I do.
+            </p>
+        </div>
+    </div>
+
+    <div class="container3">
+        <h2 id="Education">Education</h2>
+        <div class="block1">
+            <div class="content1">
+                <h4>Amolakchand Mahavidyalaya</h4>
+            </div>
+            <div class="content2">
+                <h4>2016-2019</h4>
+            </div>
+
+            <div>
+                <div class="content3"> B.COM</div>
+                <div class="content4">Yavatmal</div>
+            </div>
+        </div>
+        <div class="block2">
+            <div id="content5">
+                <h4>Jajoo Junior College</h4>
+            </div>
+            <div id="content6">
+                <h4>2014-2016</h4>
+            </div>
+            <div>
+                <div id="content7">HSC</div>
+                <div id="content8">Yavatmal</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container4">
+        <h2 id="skills" class="skills">Skills</h2>
+        <li>
+            <h3>HTML</h3>
+            <span class="range"><span class="html"></span></span>
+        </li>
+        <li>
+            <h3>CSS</h3>
+            <span class="range"><span class="css"></span></span>
+        </li>
+        <li>
+            <h3>JAVASRIPT</h3>
+            <span class="range"><span class="javascript"></span></span>
+        </li>
+        <li>
+            <h3>NODEJS</h3>
+            <span class="range"><span class="nodejs"></span></span>
+        </li>
+
+    </div>
+
+    <div class="container5">
+        <h2 id="bio" class="bio">Bio </h2>
+
+        <div class="boxleft">
+            <div><i class="fa-solid fa-calendar-days"></i><b>Age</b></div>
+        </div>
+        <div class="boxright">24</div>
+        <div class="boxleft">
+            <div><i class="fa-solid fa-envelope"></i><b>Email</b></div>
+        </div>
+        <div class="boxright">rhutwik.jaiswal24@gmail.com</div>
+        <div class="boxleft">
+            <div><i class="fa-solid fa-phone"></i><b>Phone</b></div>
+        </div>
+        <div class="boxright">8668580387</div>
+        <div class="boxleft">
+            <div><i class="fa-solid fa-location-arrow"></i><b>Address </b></div>
+        </div>
+        <div class="boxright">Jaiswal House, Shinde Nagar, Yavatmal, 445001</div>
+    </div>
+
+    <div id="projects" class="container6">
+        <h2 class="projects">Projects</h2>
+        <ul>
+            |<li class="title"><b>Resume Building</b><i class="fa-solid fa-right-long"></i> Build a responsive and good
+                looking website for personal resume with the help  of HTML & CSS. </li>
+        </ul>
+
+    </div>
+<div class="signature">Design - Rhutwik Jaiswal</div>
+</body>
+
+</html>
