--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <span class="range"><span class="javascript"></span></span>
         </li>
         <li>
-            <h3>NODEJS</h3>
+            <h3>REACT JS</h3>
             <span class="range"><span class="nodejs"></span></span>
         </li>
 
