--- a/index.html
+++ b/index.html
@@ -42,16 +42,12 @@
                         </i></a></li>
             </ul>
         </div>
-    </div>
+    </div>  
 
     <div class="container2">
         <div class="aboutMe">
             <h2 id="AboutMe">About Me</h2>
-            <p id="disp"> I am a hard-working and driven individual who isn’t afraid to face a challenge.
-                I’m passionate about my work and I know how to get the job done.
-                <br> <br> I would describe myself as an open and honest person who doesn’t believe in misleading other
-                people
-                and tries to be fair in everything I do.
+            <p id="disp">I am an enthusiastic, self-motivated, responsible and hard working person. I am a mature team worker and adaptable to all challenging situations. I am able to work well both in a team environment as well as using own initiative.
             </p>
         </div>
     </div>
@@ -100,8 +96,8 @@
             <span class="range"><span class="javascript"></span></span>
         </li>
         <li>
-            <h3>NODEJS</h3>
-            <span class="range"><span class="nodejs"></span></span>
+            <h3>REACT JS</h3>
+            <span class="range"><span class="reactjs"></span></span>
         </li>
 
     </div>
@@ -130,7 +126,7 @@
     <div id="projects" class="container6">
         <h2 class="projects">Projects</h2>
         <ul>
-            |<li class="title"><b>Resume Building</b><i class="fa-solid fa-right-long"></i> Build a responsive and good
+            <li class="title"><b>Resume Building</b><i class="fa-solid fa-right-long"></i> Build a responsive and good
                 looking website for personal resume with the help  of HTML & CSS. </li>
         </ul>
 
